# pingfederate-ai-agents-demo

./: .env.example  .gitignore  .instructions.md  DEMO_NARRATIVE.md  DEMO_QUICK_REFERENCE.md  DEPLOYMENT.md  GITHUB_REPO_READY.md  MCP_TOOLS_REFERENCE.md  Makefile  PINGAUTHORIZE_PINGIDM_GUIDE.md  README.md  SKILL.md  docker-compose.yml
acp-trip-planner-agent/: Dockerfile  pyproject.toml
acp-trip-planner-agent/src/: llm_router.py  router.py
acp-workforce-ai-agent/: AGENTS.md  Dockerfile  package.json
acp-workforce-ai-agent/deploy/: configmap.yaml  deployment.yaml  envoy.yaml  host-aliases-patch-resolved.yaml  host-aliases-patch.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml  serviceaccount.yaml  sidecar-svid-mint.yaml
acp-workforce-ai-agent/src/: agentReasoning.js  config.js  index.js  mcpClient.js  routerState.js  tracing.cjs
acp-workforce-ai-agent/test/: eventEmitter.test.js  interruptError.test.js  interruptStore.test.js  stateManager.test.js
acp-workforce-portal/: AGENTS.md  Dockerfile  graph.html  index.html  landing.html  package.json  server.js  tracing.cjs
acp-workforce-portal/authenticator-app/: app.js  index.html  login.html  manifest.json  sw.js
acp-workforce-portal/browser-graph/: entrypoint.js
acp-workforce-portal/browser-otel/: entrypoint.js
acp-workforce-portal/deploy/: deployment.yaml  host-aliases-patch-resolved.yaml  host-aliases-patch.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
acp-workforce-portal/docs/: PLAN-ciba-mobile-approver.md
scripts/: clean.sh  push-to-github.sh  setup.sh
(+38 files in other folders)
