[project]
name = "acp-trip-planner-agent"
version = "0.1.0"
# Agent-specific one-liner. Mention the protocol (AG-UI), the role (e.g.
# "trip-planning orchestrator"), and downstream protocols if any (e.g.
# "delegates to A2A agents") — see acp-trip-planner-agent for the reference shape.
description = "Trip Planner orchestrator — AG-UI front, A2A client backend. Delegates to downstream A2A agents (Weather, Flight Booker, Hotel Booker)."
requires-python = ">=3.11"

dependencies = [
    "ag-ui-protocol>=0.1.18",
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.30.0",
    "a2a-sdk[http-server]>=1.1.0",
    "httpx>=0.27.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-distro>=0.46b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "opentelemetry-instrumentation-starlette>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
